--- a/gulp-start/package.json
+++ b/gulp-start/package.json
@@ -26,5 +26,11 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "webpack-stream": "^5.2.1"
-  }
+  },
+  "browserslist": [
+		"last 2 version"
+	],
+	"dependencies": {
+		"bootstrap": "^4.3.1"
+	}
 }
